# market-making-engine

./: .gitignore  CMakeLists.txt  README.md  market_making_engine.md
data/: config.json  sample_lob_data.csv
include/backtest/: backtest_runner.hpp  metrics.hpp
include/config/: instrument_config.hpp  venue_config.hpp
include/execution/: execution_gateway.hpp  sim_execution_gateway.hpp  venue_router.hpp
include/market/: market_data_aggregator.hpp  market_view.hpp
include/risk/: portfolio.hpp  risk_manager.hpp
include/strategy/: market_maker_controller.hpp  market_making_params.hpp  quote_engine.hpp
src/: backtest_runner.cpp  main.cpp  market_data_aggregator.cpp  market_maker_controller.cpp  metrics.cpp  quote_engine.cpp  risk_manager.cpp  sim_execution_gateway.cpp  venue_router.cpp
tests/integration/: test_end_to_end.cpp
tests/unit/: test_execution_gateway.cpp  test_market_data_aggregator.cpp  test_quote_engine.cpp  test_risk_manager.cpp  test_venue_router.cpp
